2004-10-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (insert_theme): Sort the dir_mtimes 
	list in the same way as the search path.
	(theme_subdir_load): Avoid stat()ing subdirs if the theme 
	directory doesn't exist.  (#156866)

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_finalize): 
	Drop the reference to the pixbuf, regardless whether it is
	a stock pixbuf.  (#156863, Philip Langdale)

2004-10-29  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc gtk/makefile.msc.in : updated

	* gdk/win32/gdkdisplay-win32.c : dummy implementations for
	gdk_display_supports_clipboard_persistence, gdk_display_store_clipboard

	* gtk/gtkmodules.c : #include "gtkprivate.h" for GTK_LIBDIR

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c (gtk_clipboard_set_text): Don't hardwire
	the supported text targets here, use 
	gtk_target_list_add_text_targets().  (#156404)

	* gtk/gtkliststore.c (gtk_list_store_reorder): Don't
	loop over the sentinel node.  (#156298, Torsten Schoenfeld)

2004-10-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_start_editing): Use
	g_signal_connect_object() to prevent premature finalization
	of the cell_editable while the key_press_event signal is
	handled.  (#156325, Olivier Andrieu)

	* *: Clean up many sparse warnings.  (#156698, Kjartan Maraas)
	
	* gtk/gtktreeview.c (gtk_tree_view_remove_widget): Disconnect
	from the remove-widget signal after removing the signal.

	* gtk/gtkaboutdialog.c (gtk_show_about_dialog): Destroy
	the dialog with the parent.  (#156557, Paolo Borelli)

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* Bump version

	* === Released 2.5.4 ===

	* Makefile.am (EXTRA_DIST): Remove po/makefile.mingw

2004-10-28  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkclipboard.c: (gtk_clipboard_set_can_store):
	* gtk/gtkclipboard.h:
	Make targets const.
