@@ -1,5 +1,8 @@
 2004-10-30  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/testtext.c: Add a "Select All" menuitem.  (#156792,
+	Paolo Borelli)
+
 	* gtk/gtkicontheme.c (insert_theme): Sort the dir_mtimes 
 	list in the same way as the search path.
 	(theme_subdir_load): Avoid stat()ing subdirs if the theme 
